<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numbers_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:text="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/clear_btn"
            style="@style/FirstButtonStyle"
            android:text="@string/ac"
            app:layout_constraintBottom_toTopOf="@id/seven_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/positive_negative_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/positive_negative_btn"
            style="@style/FirstButtonStyle"
            android:text="@string/positive_negative"
            app:layout_constraintBottom_toTopOf="@id/eight_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/percent_btn"
            app:layout_constraintStart_toEndOf="@id/clear_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/percent_btn"
            style="@style/FirstButtonStyle"
            android:text="@string/percent"
            app:layout_constraintBottom_toTopOf="@id/nine_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/back_btn"
            app:layout_constraintStart_toEndOf="@id/positive_negative_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_btn"
            style="@style/FirstButtonStyle"
            android:contentDescription="@string/backspace_icon"
            android:scaleType="center"
            android:src="@drawable/backspace_icon"
            app:layout_constraintBottom_toTopOf="@id/multiply_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/percent_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/seven_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@id/four_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/eight_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_btn" />

        <TextView
            android:id="@+id/eight_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@id/five_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/nine_btn"
            app:layout_constraintStart_toEndOf="@id/seven_btn"
            app:layout_constraintTop_toBottomOf="@id/positive_negative_btn" />

        <TextView
            android:id="@+id/nine_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@id/six_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/multiply_btn"
            app:layout_constraintStart_toEndOf="@id/eight_btn"
            app:layout_constraintTop_toBottomOf="@id/percent_btn" />

        <TextView
            android:id="@+id/multiply_btn"
            style="@style/ThirdButtonStyle"
            android:text="@string/multiply"
            app:layout_constraintBottom_toTopOf="@id/minus_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nine_btn"
            app:layout_constraintTop_toBottomOf="@id/back_btn" />

        <TextView
            android:id="@+id/four_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@id/one_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/five_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven_btn" />

        <TextView
            android:id="@+id/five_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@id/two_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/six_btn"
            app:layout_constraintStart_toEndOf="@id/four_btn"
            app:layout_constraintTop_toBottomOf="@id/eight_btn" />

        <TextView
            android:id="@+id/six_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@id/three_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/minus_btn"
            app:layout_constraintStart_toEndOf="@id/five_btn"
            app:layout_constraintTop_toBottomOf="@id/nine_btn" />

        <TextView
            android:id="@+id/minus_btn"
            style="@style/ThirdButtonStyle"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@id/plus_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/six_btn"
            app:layout_constraintTop_toBottomOf="@id/multiply_btn" />

        <TextView
            android:id="@+id/one_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@id/zero_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/two_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four_btn" />

        <TextView
            android:id="@+id/two_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@id/point_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/three_btn"
            app:layout_constraintStart_toEndOf="@id/one_btn"
            app:layout_constraintTop_toBottomOf="@id/five_btn" />

        <TextView
            android:id="@+id/three_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@id/equal_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/plus_btn"
            app:layout_constraintStart_toEndOf="@id/two_btn"
            app:layout_constraintTop_toBottomOf="@id/six_btn" />

        <TextView
            android:id="@+id/plus_btn"
            style="@style/ThirdButtonStyle"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@id/divide_btn"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/three_btn"
            app:layout_constraintTop_toBottomOf="@id/minus_btn" />

        <TextView
            android:id="@+id/zero_btn"
            style="@style/SecondButtonStyle"
            android:gravity="center"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/point_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one_btn"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/point_btn"
            style="@style/SecondButtonStyle"
            android:text="@string/point"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/equal_btn"
            app:layout_constraintStart_toEndOf="@id/zero_btn"
            app:layout_constraintTop_toBottomOf="@id/two_btn" />

        <TextView
            android:id="@+id/equal_btn"
            style="@style/ThirdButtonStyle"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/divide_btn"
            app:layout_constraintStart_toEndOf="@id/point_btn"
            app:layout_constraintTop_toBottomOf="@id/three_btn" />

        <TextView
            android:id="@+id/divide_btn"
            style="@style/ThirdButtonStyle"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/equal_btn"
            app:layout_constraintTop_toBottomOf="@id/plus_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>